[INTERNAL][FIX] ui.Table: Fix position of vertical scrollbar
SNOW: DINC0422830

--- a/src/sap.ui.table/src/sap/ui/table/themes/base/Scrolling.less
+++ b/src/sap.ui.table/src/sap/ui/table/themes/base/Scrolling.less
@@ -44,10 +44,13 @@
 .sapUiTableVSb {
 	width: 100%;
 	position: absolute;
+	bottom: 0;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: auto;
 	background-color: var(--sapList_Background);
+	border-top: @_sap_ui_table_BaseBorderWidth solid var(--sapList_HeaderBorderColor);
+	border-bottom: @_sap_ui_table_BaseBorderWidth solid var(--sapList_HeaderBorderColor);
 }
 
 .sapUiTableVSbHeader {
